infra/ecs-product-service.tf
resource "aws_ecs_service" "product_service" {
  name            = "stockwiz-product-service"
  cluster         = aws_ecs_cluster.stockwiz_cluster.id
  task_definition = aws_ecs_task_definition.product_service.arn
  launch_type     = "FARGATE"
  desired_count   = 1

  network_configuration {
    subnets          = [data.aws_subnet.subnet_a.id, data.aws_subnet.subnet_f.id]
    assign_public_ip = true
    security_groups  = [aws_security_group.ecs_tasks_sg.id]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.product_service_tg.arn
    container_name   = "product-service"
    container_port   = 8001
  }

  depends_on = [
    aws_lb_listener.http_listener
  ]
}
